src/_css/06.components/next-post.css
.next-post {
	display: flex;
	position: relative;
	flex-direction: column;
	align-items: center;
	margin: auto;
	background: black;
	background-position: center;
	background-size: cover;
	padding: calc(var(--padding__medium) * 4) 0;
	overflow: clip;
	color: white;
	font-family: var(--font__meta);
	text-align: center;

	.read-more-text {
		margin-bottom: var(--margin__medium);
		font-weight: 600;
		font-size: 90%;
		text-transform: uppercase;
	}

	.next-post__title {
		display: block;
		color: white;
		font-weight: 900;
		font-size: var(--font__size__heading-1);
		line-height: 1.3;
		font-family: var(--font__headings);
		letter-spacing: -0.2rem;

		&:visited {
			color: white;
		}

		&:after {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			content: "";
		}
	}

	.next-post__metadata {
		z-index: 10;
		padding: 0 var(--padding__medium);
		width: 100%;
		max-width: var(--max-width__content);
	}

	.next-post__date {
		margin-top: var(--padding__small);
	}

	.next-post__date {
		margin-top: var(--padding__small);
	}

	.next-post__image {
		position: absolute;
		top: 0;
		margin: 0;
		width: 100%;
		height: 100%;

		picture {
			width: 100%;
			height: 100%;
		}

		img {
			margin: 0;
			padding: 0;
			width: 100%;
			height: 100%;
			object-fit: cover;
			object-position: center;
		}
	}

	&:not(.-feature-image) {
		.next-post__title {
			/* noinspection CssInvalidPropertyValue */
			@supports (
				(background-clip: text) and
					(background: linear-gradient(120deg, black 0%, white 37.5%, black 100%))
			) {
				background: linear-gradient(
					120deg,
					var(--color__accent) 0%,
					var(--color__accent-secondary) 37.5%,
					var(--color__accent) 100%
				);
				background-clip: text;
				color: transparent;
			}
		}
	}

	&.-feature-image {
		.next-post__metadata {
			text-shadow:
				0 1px 1px rgba(0, 0, 0, 0.1),
				0 2px 2px rgba(0, 0, 0, 0.2),
				0 4px 4px rgba(0, 0, 0, 0.15),
				0 8px 8px rgba(0, 0, 0, 0.1),
				0 16px 16px rgba(0, 0, 0, 0.05);
		}

		&.-feature-image--bottom {
			.next-post__image img {
				object-position: bottom;
			}
		}

		&.-feature-image--top {
			.next-post__image img {
				object-position: top;
			}
		}

		&.-feature-image--left {
			.next-post__image img {
				object-position: left;
			}
		}

		&.-feature-image--right {
			.next-post__image img {
				object-position: right;
			}
		}
	}

	&:after {
		position: absolute;
		top: 0;
		left: 0;
		background: oklch(0% 0 0deg / 0.5);
		width: 100%;
		height: 100%;
		content: "";
	}
}

